Add existing file

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Model Viewer Prototype.loader.js";
+      var loaderUrl = buildUrl + "/Model-Viewer-Prototype.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Model Viewer Prototype.data",
-        frameworkUrl: buildUrl + "/Model Viewer Prototype.framework.js",
-        codeUrl: buildUrl + "/Model Viewer Prototype.wasm",
+        dataUrl: buildUrl + "/Model-Viewer-Prototype.data",
+        frameworkUrl: buildUrl + "/Model-Viewer-Prototype.framework.js",
+        codeUrl: buildUrl + "/Model-Viewer-Prototype.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Blue Oath",
